--- a/index.html
+++ b/index.html
@@ -1,18 +1,35 @@
 <html>
 <head>
 <meta charset ="utf-8">
-  <style>
+</head>
+<body>
+<ul id="gm">
+<li><a    href="new 3.html"    >CONTACT US</a></li>
+<li><a    href="new .html"    >QWERTY</a></li>
+<li><a    href="new .html"    >QWERTY</a></li>
+<li><a    href="new 1.html"    >SHOP</a></li>
+<div id="pic">
+<p> <a href="index.html"> <img src="company.jpg" width="200" height="50" alt=""
+</div></p></a>
+</ul>	
+  <style type="text/css">
    .layer1 {
     font: 20pt lucida console;  
    } 
    h1 {
-    font: 250% lucida console;
+    font: 200% lucida console;
+   }
+      h2 {
+    font: 200% lucida console;
+   }
+         h3 {
+    font: 100% lucida console;
    }
    
    
       html {
     height: 100%; /* Высота веб-страницы */
-    background: #000 url(qw.gif) 
+    background: #000 url(q.gif) 
           no-repeat  bottom; /* Путь к графическому файлу с фоном */
     color: #fff; /* Белый цвет текста */
    }	
@@ -22,6 +39,7 @@
    padding:0;
    border:0px solid#111111;
    background-color:#0000FE;
+      text-decoratoin:none;
    list-style:none;
    font:25px/50px arial;
    height:50px;
@@ -49,17 +67,23 @@
    background-color:#226FFF;
    color:#FFFFFF;
    }
+   
+      #pic {
+    float: left; /* Обтекание картинки текстом */
+   }
+   #text {
+    margin-left: 100px; /* Отступ от левого края */
+   }  
   </style>
 </head>
 <body>
-<ul id="gm">
-<li><a href="new 3.html">CONTACT US</a></li>
-<li><a href="new .html">QWERTY</a></li>
-<li><a href="new .html">QWERTY</a></li>
-<li><a href="new 1.html">SHOP</a></li>
-<p align="left"><a href="index.html"><img src="company.jpg" alt=""></p></a>
-</ul>
 <title>CENTRAL</title>
 <embed src="music.mp3" autostart="true" hidden="true" loop="true"> </embed>
+ <body bgcolor="#c0c0c0" background="qwerty.jpg" bgproperties="fixed">
+<br><br>
+<span style="border-width:20px; border-style:groove; padding:25px; border-color:#00FFFF">   <font size="+3">Чем занимается наша организация?  </font></span><br><br><br>
+<h1>Аренда, продажа звуковой техники. <br>Ремонт звуковой техники. <br>Изготовление корпусов и чехлов для звуковой техники.</h1><br><br><br><br><br><br><br><br><br><br>
+<h3>В пункте SHOP вы можете ознакомиться с полным каталогом услуг, осуществляемых нами. </h3>
+<h3>В пункте CONTACT US вы можете найти юридическую информацию о нас.</h3>
 </body>
 </html>
