--- a/new 1.html
+++ b/new 1.html
@@ -9,12 +9,14 @@
 <li><a    href="new .html"    >QWERTY</a></li>
 <li><a    href="new .html"    >QWERTY</a></li>
 <li><a    href="new 1.html"    >SHOP</a></li>
-<p align="left"><a href="index.html"><img src="company.jpg" alt=""></p></a>
+<div id="pic">
+<p> <a href="index.html"> <img src="company.jpg" width="200" height="50" alt=""
+</div></p></a>
 </ul>
 <style type="text/css">
          html {
     height: 100%; /* Высота веб-страницы */
-    background: #000 url(qw.gif) 
+    background: #000 url(q.gif) 
           no-repeat  bottom; /* Путь к графическому файлу с фоном */
     color: #fff; /* Белый цвет текста */
    }	
@@ -72,22 +74,13 @@
     margin: 0 auto 0px; /* Отступы вокруг абзаца */
    }
    </style>
-  <p class="thumb">
-   <a href="rcf.html"><img src="rcf.jpg" width="210" height="210" alt=""></a>
-   <a href="svet.html"><img src="svet.jpg" width="210" height="210" alt=""></a>
-   <a href="video.html"><img src="video.jpg" width="210" height="210" alt=""></a>
-  </p>
-
-  
-  
-<span class="regular-price">
-  <figure class="sign">
-  <span class="product-name">rcf</span>
-   <figcaption>99,990 pyb</figcaption>
-  
-  
-  
-  
+   
+<p class="thumb">
+<a href="rcf.html"><img src="rcf.jpg" width="210" height="210" alt=""></a>
+<a href="svet.html"><img src="svet.jpg" width="210" height="210" alt=""></a>
+<a href="video.html"><img src="video.jpg" width="210" height="210" alt=""></a>
+</p>
+<body bgcolor="#c0c0c0" background="qwerty.jpg" bgproperties="fixed">
 <body text="WHITE	">
 <embed src="music.mp3" autostart="true" hidden="true" loop="true"> </embed>
 </BODY>	
