--- a/new 3.html
+++ b/new 3.html
@@ -5,16 +5,16 @@
 <body>
 <title>CONTACT US</title>
 <ul id="gm">
-<li><a    href="new 3.html"    >CONTACT US</a></li>
-<li><a    href="new .html"    >QWERTY</a></li>
-<li><a    href="new .html"    >QWERTY</a></li>
-<li><a    href="new 1.html"    >SHOP</a></li>
-<p align="left"><a href="index.html"><img src="company.jpg" alt=""></p></a>
+<li><a href="new 3.html">CONTACT US</a></li>
+<li><a href="new .html">QWERTY</a></li>
+<li><a href="new .html">QWERTY</a></li>
+<li><a href="new 1.html">SHOP</a></li>
+<p align="left"><a href="index.html"><img src="compa.jpg" alt=""></p></a>
 </ul>
 <style type="text/css">   
-         html {
+	html {
     height: 100%; /* Высота веб-страницы */
-    background: #000 url(qw.gif) 
+    background: #000 url(q.gif) 
           no-repeat  bottom; /* Путь к графическому файлу с фоном */
     color: #fff; /* Белый цвет текста */
    }	
@@ -56,9 +56,8 @@
 <br>
 <a href="http://vk.com/klimka10101"><p align="left"><img src="vk.jpg"</p></a><br><br>
 <h4 align="left">Телефон: 8 (917) 133 84 34</h4>
-<h4 align="left">Email: kyt@yandex.ru</h4>
-   
-   
-   <embed src="music.mp3" autostart="true" hidden="true" loop="true"> </embed>
+<h4 align="left">Email: kyt@yandex.ru</h4>  
+<body bgcolor="#c0c0c0" background="qwerty.jpg" bgproperties="fixed">
+<embed src="music.mp3" autostart="true" hidden="true" loop="true"> </embed>
 </body>
 </html>
