--- a/index.html
+++ b/index.html
@@ -2,16 +2,7 @@
 <head>
 <meta charset ="utf-8">
 </head>
-<body>
-<ul id="gm">
-<li><a    href="new 3.html"    >CONTACT US</a></li>
-<li><a    href="new .html"    >QWERTY</a></li>
-<li><a    href="new .html"    >QWERTY</a></li>
-<li><a    href="new 1.html"    >SHOP</a></li>
-<div id="pic">
-<p> <a href="index.html"> <img src="company.jpg" width="200" height="50" alt=""
-</div></p></a>
-</ul>	
+<body>	
   <style type="text/css">
    .layer1 {
     font: 20pt lucida console;  
@@ -33,43 +24,47 @@
           no-repeat  bottom; /* Путь к графическому файлу с фоном */
     color: #fff; /* Белый цвет текста */
    }	
-      #gm
-   {
-   margin:0px:
-   padding:0;
-   border:0px solid#111111;
-   background-color:#0000FE;
-      text-decoratoin:none;
-   list-style:none;
-   font:25px/50px arial;
-   height:50px;
-   letter spacing:0px;
-   }
-   #gm li
-   {
-   float:right;
-   }
-   #gm li a
-   {
    
-   display:block;
-   padding:0 70px;
-   color:#fff;
-   background-color:#226FFF:
-   text-decoratoin:none;
-   border-right:0px solid#111111;
-   height:70px
-   wight:0px:
-   }
-   #gm li a:hover 
-   {
    
-   background-color:#226FFF;
-   color:#FFFFFF;
-   }
+#navbar ul {
+  display: none;
+  background-color: #c0c0c0;
+  position: absolute;
+  top: 100%;
+}
+#navbar li:hover ul { display: block; }
+#navbar, #navbar ul {
+  margin: 0;
+  padding: 10;
+  list-style-type: none;
+}
+#navbar {
+  height: 40px;
+  background-color: #0000ff;
+  padding-left: 900px;
+  min-width: 7px;
+}
+#navbar li {
+  float: left;
+  position: relative;
+  height: 100%;
+}
+#navbar li a {
+  display: block;
+  padding: 9px;
+  width: 100px;
+  color: #fff;
+  text-decoration: none;
+  text-align: left;
+}
+#navbar ul li { float: left; }
+#navbar li:hover { background-color: #007fff; }
+#navbar ul li:hover { background-color: #007fff; }
+   
+   
    
       #pic {
-    float: left; /* Обтекание картинки текстом */
+    float: center; /* Обтекание картинки текстом */
    }
    #text {
     margin-left: 100px; /* Отступ от левого края */
@@ -77,11 +72,23 @@
   </style>
 </head>
 <body>
+  
+    <ul id="navbar">
+
+      <li><a href="news.html">Новости</a></li>
+      <li><a href="mag.html">Магазин</a>
+        <ul>
+          <li><a href="rcf.html">Колонки</a></li>
+          <li><a href="mikro.html">Микрофоны</a></li>
+          <li><a href="pro.html">Проекторы</a></li>
+        </ul>
+      </li>
+      <li><a href="new 3.html">О нас</a></li>
+    </ul>
 <title>CENTRAL</title>
 <embed src="music.mp3" autostart="true" hidden="true" loop="true"> </embed>
- <body bgcolor="#c0c0c0" background="qwerty.jpg" bgproperties="fixed">
-<br><br>
-<span style="border-width:20px; border-style:groove; padding:25px; border-color:#00FFFF">   <font size="+3">Чем занимается наша организация?  </font></span><br><br><br>
+<body bgcolor="#c0c0c0" background="qwerty.jpg" bgproperties="fixed">
+<br>
 <h1>Аренда, продажа звуковой техники. <br>Ремонт звуковой техники. <br>Изготовление корпусов и чехлов для звуковой техники.</h1><br><br><br><br><br><br><br><br><br><br>
 <h3>В пункте SHOP вы можете ознакомиться с полным каталогом услуг, осуществляемых нами. </h3>
 <h3>В пункте CONTACT US вы можете найти юридическую информацию о нас.</h3>
