--- a/new 1.html
+++ b/new 1.html
@@ -10,9 +10,11 @@
 <li><a    href="new .html"    >QWERTY</a></li>
 <li><a    href="new 1.html"    >SHOP</a></li>
 <div id="pic">
-<p> <a href="index.html"> <img src="company.jpg" width="200" height="50" alt=""
+<p> <a href="index.html"> <img src="company.jpg" width="200" height="40" alt=""
 </div></p></a>
 </ul>
+<BR>
+<span style="border-width:20px; float:center; border-style:groove; padding:25px; border-color:#00FFFF">   <font size="+3">SHOP</font></span><br><br><br>
 <style type="text/css">
          html {
     height: 100%; /* Высота веб-страницы */
@@ -27,8 +29,8 @@
    border:0px solid#111111;
    background-color:#0000FE;
    list-style:none;
-   font:25px/50px arial;
-   height:50px;
+   font:19px/40px lucida console;
+   height:40px;
    letter spacing:0px;
    }
    #gm li
@@ -39,13 +41,13 @@
    {
    
    display:block;
-   padding:0 70px;
+   padding:0 50px;
    color:#fff;
    background-color:#226FFF:
    text-decoratoin:none;
    border-right:0px solid#111111;
-   height:70px
-   wight:0px:
+   height:10px
+   wight:10px:
    }
    #gm li a:hover 
    {
@@ -54,20 +56,21 @@
    color:#FFFFFF;
    }
       .thumb img  {
-    border: px solid #55c5e9; /* Рамка вокруг фотографии */
-    padding: 4px; /* Расстояние от картинки до рамки */
+	float: center;
+    border: 5px solid #666; /* Рамка вокруг фотографии */
+    padding: 0px; /* Расстояние от картинки до рамки */
     background: #666; /* Цвет фона */
-    margin-right: 100px; /* Отступ справа */
-	margin-left: 100px; /* Отступ справа */
-    margin-bottom: 	0px; /* Отступ снизу */
+    margin-right: 3	0px; /* Отступ справа */
+	margin-left: 60px; /* Отступ слева */
+    margin-bottom: 	20px; /* Отступ снизу */
    }
        A IMG { border: none; }
 	   
 	    .sign {
     float: left; /* Выравнивание по левому краю */
     border: 0px solid #333; /* Параметры рамки */
-    padding: 10px; /* Поля внутри блока */
-    margin: 0px 0 0px 150px; /* Отступы вокруг */
+    padding: 200px; /* Поля внутри блока */
+    margin: 10px 10 10px 150px; /* Отступы вокруг */
     background: #ff0000; /* Цвет фона */ 
    }
    .sign figcaption {
@@ -76,11 +79,17 @@
    </style>
    
 <p class="thumb">
-<a href="rcf.html"><img src="rcf.jpg" width="210" height="210" alt=""></a>
-<a href="svet.html"><img src="svet.jpg" width="210" height="210" alt=""></a>
-<a href="video.html"><img src="video.jpg" width="210" height="210" alt=""></a>
+<a href="rcf.html"><img src="rcf.jpg" width="200" height="200" alt=""></a>
+<a href="svet.html"><img src="svet.jpg" width="200" height="200" alt=""></a>
+<a href="video.html"><img src="video.jpg" width="200" height="200" alt=""></a>
+<a href="video.html"><img src="video.jpg" width="200" height="200" alt=""></a>
+<a href="video.html"><img src="video.jpg" width="200" height="200" alt=""></a>
+<a href="video.html"><img src="video.jpg" width="200" height="200" alt=""></a>
+<a href="video.html"><img src="video.jpg" width="200" height="200" alt=""></a>
+<a href="video.html"><img src="video.jpg" width="200" height="200" alt=""></a>
+<a href="video.html"><img src="video.jpg" width="200" height="200" alt=""></a>
 </p>
 <body bgcolor="#c0c0c0" background="qwerty.jpg" bgproperties="fixed">
-<body text="WHITE	">
+<body text="WHITE">
 <embed src="music.mp3" autostart="true" hidden="true" loop="true"> </embed>
 </BODY>	
