--- a/new 3.html
+++ b/new 3.html
@@ -9,8 +9,9 @@
 <li><a href="new .html">QWERTY</a></li>
 <li><a href="new .html">QWERTY</a></li>
 <li><a href="new 1.html">SHOP</a></li>
-<p align="left"><a href="index.html"><img src="compa.jpg" alt=""></p></a>
-</ul>
+<div id="pic">
+<p> <a href="index.html"> <img src="company.jpg" width="200" height="40" alt=""
+</div></p></a></ul>
 <style type="text/css">   
 	html {
     height: 100%; /* Высота веб-страницы */
@@ -25,8 +26,8 @@
    border:0px solid#111111;
    background-color:#0000FE;
    list-style:none;
-   font:25px/50px arial;
-   height:50px;
+   font:19px/40px lucida console;
+   height:40px;
    letter spacing:0px;
    }
    #gm li
@@ -37,7 +38,7 @@
    {
    
    display:block;
-   padding:0 70px;
+   padding:0 50px;
    color:#fff;
    background-color:#226FFF:
    text-decoratoin:none;
@@ -52,7 +53,8 @@
    color:#FFFFFF;
    }
    </style>
-<h1 align="LEFT">CONTACT US</h1>
+   <br>
+<span style="border-width:20px; border-style:groove; padding:25px; border-color:#00FFFF">   <font size="+3">CONTACT US </font></span><br><br><br>
 <br>
 <a href="http://vk.com/klimka10101"><p align="left"><img src="vk.jpg"</p></a><br><br>
 <h4 align="left">Телефон: 8 (917) 133 84 34</h4>
